--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-dom": "^17.0.1",
     "react-notifications-component": "^3.0.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.0",
     "react-stripe-checkout": "^2.6.3",
     "react-svg": "^11.1.1",
     "redux-persist": "^6.0.0",
