--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "react-ee-project",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.18.2"
+    },
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
